sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: ')' expected but $XMLSTART$< found.
  while ((debut< avantBlanc) && (debut <fin){
                                       ^DutchFlagAlgo:30: error: illegal start of simple expression
} 
^